<resources>
    <string name="app_name">CScan</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_main"><b>C</b>Scan</string>
    <string name="title_activity_settings">Settings</string>

    <string name="action_view">View</string>
    <string name="action_open_link">Open link</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_undo">Undo</string>
    <string name="action_settings">Settings</string>

    <string name="pref_key_links_category">category_links</string>
    <string name="pref_key_scan_category">category_scan</string>
    <string name="pref_key_scan_barcode">scan_barcode</string>
    <string name="pref_key_open_links">open_links</string>
    <string name="pref_key_next_error">next_activity_error</string>
    <string name="pref_key_browser_type">browser_type</string>

    <string name="pref_title_links_category">Links</string>
    <string name="pref_title_scan_category">Scan</string>
    <string name="pref_title_scan_barcodes">Scan barcodes</string>
    <string name="pref_title_open_links">Open links</string>
    <string name="pref_title_browser_type">Choose browser</string>
    <string name="pref_no_next_error">no_next_error</string>

    <string name="pref_summary_scan_barcodes">Allow barcode scanning</string>
    <string name="pref_summary_open_links">Open links when scanned</string>
    <string name="pref_summary_browser_type">Choose browser to open links</string>

    <string name="list_item_in_app_browser">In app (Recommended)</string>
    <string name="list_item_default_browser">Default</string>


    <string name="hint_copy_link">Hold text to copy</string>

    <string name="text_empty_view">Nothing to show. Scanned items will be added here. Press II to scan.</string> <!-- II = image position -->

    <string name="file_write_error">Error while saving</string>
    <string name="file_delete_success">Removed</string>
    <string name="file_delete_error">Error while removing</string>
    <string name="file_update_success">Updated</string>
    <string name="file_update_error">Error while updating</string>
    <string name="file_duplicate_error">Already scanned</string>

    <string name="flash_open_error">Unable to access flash light</string>
    <string name="camera_open_error">Unable to access camera</string>

    <string name="generic_error">An error occurred</string>

    <string name="edittext_max_lines">10</string>

    <string name="cscan_shared_preference_name">CSCAN_SHARED_PREFERENCES</string>
</resources>
